--- a/ex1/sheet1.ipynb
+++ b/ex1/sheet1.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -267,8 +267,7 @@
     "        line = f.readline()\n",
     "    f.close()\n",
     "    return train\n",
-    "    # <<<<< END YOUR CODE\n",
-    "gettrain()"
+    "    # <<<<< END YOUR CODE"
    ]
   },
   {
@@ -308,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -324,13 +323,19 @@
    "source": [
     "def neighbor(x, trainset):\n",
     "    # >>>>> YOUR CODE HERE\n",
-    "    raise NotImplementedError(\"Replace this line by your code.\")\n",
+    "    result = (1000000, None)\n",
+    "    for t in trainset:\n",
+    "        b = t[0]\n",
+    "        dist = (x[0] != b[0]) + ((x[1] - b[1]) / 50.0) ** 2 + (x[2] != b[2])\n",
+    "        if dist < result[0]:\n",
+    "            result = (dist, t[1])\n",
+    "    return result[1]\n",
     "    # <<<<< END YOUR CODE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -361,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -377,14 +382,21 @@
    "source": [
     "def compare():\n",
     "    # >>>>> YOUR CODE HERE\n",
-    "    raise NotImplementedError(\"Replace this line by your code.\")\n",
+    "    Xdisagree = []\n",
+    "    train = gettrain()\n",
+    "    test = gettest()\n",
+    "    \n",
+    "    for x in test:\n",
+    "        if neighbor(x, train) != decision(x):\n",
+    "            Xdisagree.append(x)\n",
+    "    probability = len(Xdisagree) / len(test)\n",
     "    # <<<<< END YOUR CODE\n",
     "    return Xdisagree, probability"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -398,7 +410,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('yes', 51.0, 'good')]\n"
+     ]
+    }
+   ],
    "source": [
     "Xdisagree, probability = compare()\n",
     "assert type(Xdisagree) == list\n",
